Fixed Pointers and Pointer lines alignment
Bug: T210232

--- a/modules/ext.RevisionSlider.less
+++ b/modules/ext.RevisionSlider.less
@@ -168,7 +168,7 @@
 }
 
 .mw-revslider-arrow {
-	width: 20px;
+	width: 22px;
 	height: 142px;
 
 	&.oo-ui-buttonElement .oo-ui-buttonElement-button {
